[gd_scene load_steps=2 format=3 uid="uid://bs8lmh8w8aih0"]

[ext_resource type="Script" uid="uid://d3govi36iqosf" path="res://objects/pause_menu.gd" id="1_aktha"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_aktha")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 135.0
offset_top = 25.0
offset_right = 218.0
offset_bottom = 57.0
text = "Paused"

[node name="ResumeButton" type="Button" parent="."]
offset_left = 130.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 101.0
text = "Resume"

[node name="MenuButton" type="Button" parent="."]
offset_left = 112.0
offset_top = 117.0
offset_right = 226.0
offset_bottom = 148.0
text = "Back to Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
